[tool.black]
line-length = 79
# include =
exclude = '''
/(
    \.git
  | __pycache__
  | .pytest_cache
  | .venv
  | alembic
  | staticfiles
  | build
  | dist
)/
'''

[tool.coverage.paths]
source = ["cheeses/users", "cheese/cheeses", "config/settings"]

[tool.coverage.run]
branch = true
source = ["config"]
omit = [
    "*/__init__.py",
    "*manage.py",
    "*settings*.py",
    "*urls.py",
    "*admin.py",
    "*migrations/*",
    "*tests/*",
    "*test_*.py",
    "*tests.py",
    "*wsgi.py",
    "*conftest.py",
    "*/extra*",
]
plugins = [
    "django_coverage_plugin",
]

[tool.coverage.django_coverage_plugin]
template_extensions = "html, txt, tex, email"

[tool.coverage.report]
show_missing = true

[tool.poetry]
name = "cheese"
version = "0.1.0"
description = "A cheese index application built with the Django web framework"
authors = ["Kevin Bowen <kevin.bowen@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
cookiecutter = "^2.1.1"
Django = "^4.1"
django-environ = "^0.9.0"
django-allauth = "^0.51.0"
django-model-utils = "^4.0.0"
django-crispy-forms = "^1.9.2"
django-autoslug = "1.9.8"
pytz = "2022.1"
python-slugify = "6.1.2"
Pillow = "^9.2.0"
whitenoise = "^6.2.0"
Unidecode = "^1.1.1"
Werkzeug = "^2.1.2"
ipdb = "^0.13.3"
psycopg2-binary = "^2.8.6"
friendly = "^0.7.0"
colorama = "^0.4.4"
django-countries = "^7.3.2"
django-extensions = "^3.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
coverage = "^6.4.2"
black = "^22.6.0"
pylint-django = "^2.3.0"
pre-commit = "^3.0.0"
mypy = "^0.900"
django-stubs = "^1.5.0"
pytest = "^7.1.2"
pytest-sugar = "^0.9.4"
django-test-plus = "^2.2.0"
factory-boy = "3.0.1"
django-debug-toolbar = "^3.1"
django-coverage-plugin = "^2.0.3"
pytest-django = "^4.5.2"
nox = "^2022.8.7"
flake8-bandit = "^4.0.0"
flake8-black = "^0.3.3"
flake8-bugbear = "^23.0.0"
flake8-import-order = "^0.18.1"
safety = "^2.1.0"
Sphinx = "^5.3.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
filterwarnings = [
    "ignore::django.utils.deprecation.RemovedInDjango50Warning",
    "ignore::django.utils.deprecation.RemovedInDjango41Warning",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
